--- a/index.html
+++ b/index.html
@@ -125,9 +125,14 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: url('FSOCIETY.webp') no-repeat center center;
-    background-size: cover;
+    overflow: hidden;
     z-index: 999;
+  }
+
+  #camuflagem img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* preenche toda a tela mantendo proporção */
   }
 
   #voltar {
@@ -182,6 +187,7 @@
 
   <!-- MODO CAMUFLAGEM FULLSCREEN -->
   <div id="camuflagem">
+    <img src="FUTURO.webp" alt="FUTURO" />
     <button id="voltar" onclick="desativarCamuflagem()">Voltar</button>
   </div>
 
