--- a/index.html
+++ b/index.html
@@ -117,13 +117,22 @@
     background-color: #00e6b8;
   }
 
-  /* MODO CAMUFLAGEM */
+  /* MODO CAMUFLAGEM FULLSCREEN */
   #camuflagem {
     display: none;
-    background: url('JPN.webp') no-repeat center center fixed;
-    background-size: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
+    z-index: 999;
+  }
+
+  #camuflagem img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* preenche toda a tela mantendo proporção */
   }
 
   #voltar {
@@ -137,8 +146,7 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    z-index: 10;
-    display: none;
+    z-index: 1000; /* acima da imagem */
   }
 
   #voltar:hover {
@@ -170,17 +178,18 @@
 
   <div id="videoContainer">
     <h1>~ PROVA.mp4 ~</h1>
-    <video controls autoplay muted loop
-           style="width: 250px; border: 2px solid #00ffcc; border-radius: 8px; box-shadow: 0 0 20px #00ffcc; background: black; user-select: none; pointer-events: auto;">
+    <video controls autoplay muted loop>
       <source src="PROVA.mp4" type="video/mp4" />
       Seu navegador não suporta a reprodução de vídeo.
     </video>
     <button onclick="ativarCamuflagem()">Modo Camuflagem</button>
   </div>
 
-  <!-- MODO CAMUFLAGEM -->
-  <div id="camuflagem"></div>
-  <button id="voltar" onclick="desativarCamuflagem()">Voltar</button>
+  <!-- MODO CAMUFLAGEM FULLSCREEN -->
+  <div id="camuflagem">
+    <img src="FUTURO.webp" alt="FUTURO" />
+    <button id="voltar" onclick="desativarCamuflagem()">Voltar</button>
+  </div>
 
   <!-- MASCOTE ANIMADO -->
   <div id="mascote">💀</div>
@@ -191,8 +200,6 @@
     const commandInput = document.getElementById('command-input');
     const videoContainer = document.getElementById('videoContainer');
     const camuflagem = document.getElementById('camuflagem');
-    const voltar = document.getElementById('voltar');
-    const mascote = document.getElementById('mascote');
 
     function escreveTexto(text, callback) {
       let i = 0;
@@ -213,7 +220,6 @@
 
     function processarComando(cmd) {
       cmd = cmd.trim().toUpperCase();
-
       escreveTexto(`root@fsociety:~$ ${cmd}`);
 
       if(cmd === "NMAP"){
@@ -257,23 +263,23 @@
     });
 
     function ativarCamuflagem() {
-      terminal.style.display = "none";
+      document.body.style.backgroundColor = "#000";
       videoContainer.style.display = "none";
-      mascote.style.display = "none"; // 💀 desaparece
+      terminal.style.display = "none";
       camuflagem.style.display = "block";
-      voltar.style.display = "block";
     }
 
     function desativarCamuflagem() {
-      terminal.style.display = "flex";
-      videoContainer.style.display = "flex";
-      mascote.style.display = "block"; // 💀 volta
+      document.body.style.backgroundColor = "";
       camuflagem.style.display = "none";
-      voltar.style.display = "none";
+      videoContainer.style.display = "flex";
+      terminal.style.display = "flex";
       commandInput.focus();
     }
 
     // Mascote animado flutuante (💀) com efeito glitch nas bordas
+    const mascote = document.getElementById("mascote");
+
     let x = 50;
     let y = 50;
     let dx = 2;
@@ -290,7 +296,7 @@
         pisca++;
         if (pisca > 5) {
           clearInterval(piscarInterval);
-          mascote.style.color = '#00ffcc'; // cor original
+          mascote.style.color = '#00ffcc';
           efeitoAtivo = false;
         }
       }, 50);
@@ -325,7 +331,6 @@
     }
 
     moverMascote();
-
     window.onload = () => commandInput.focus();
   </script>
 </body>
